# InfiniteCodeMapCanvas

./: .gitignore
backend/: main.py  pyproject.toml
backend/codemap/: config.py  event_bus.py  paths.py  server.py  session.py  stats.py  watcher.py
backend/codemap/api/: routes_fs.py  routes_graph.py  routes_health.py  routes_project.py  routes_ws.py
backend/codemap/indexer/: graph_builder.py  ids.py  ignore.py  incremental.py  parser_base.py  parser_python.py  parser_python_jedi.py  pool.py  walker.py
backend/codemap/storage/: migrations.py  schema.sql  store.py
frontend/: eslint.config.js  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css
frontend/src/api/: client.ts  types.ts  ws.ts
frontend/src/canvas/: Canvas.tsx
frontend/src/canvas/edges/: edgeStyles.ts
frontend/src/canvas/nodes/: ClassNode.tsx  DirectoryNode.tsx  ExternalModuleNode.tsx  FileNode.tsx  FunctionNode.tsx
frontend/src/panels/: MenuBar.tsx  ProjectPicker.tsx  StatsModal.tsx
frontend/src/store/: graph.ts  project.ts
