[project]
name = "infinitecodemapcanvas"
version = "0.1.0"
description = "Interactive canvas mapping Python codebases as nested nodes and edges."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.1",
    "pathspec>=1.1.1",
    "uvicorn[standard]>=0.47.0",
    "websockets>=16.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["codemap"]
